--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.47.0",
@@ -26,7 +28,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
-    "styled-components": "^5.3.1",
+    "styled-components": "^6.0.0-rc.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -54,7 +56,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "babel-jest": "^29.4.2"
+    "@babel/core": "^7.20.12"
   }
 }
